--- a/src/blocks/head-foot/footer.css
+++ b/src/blocks/head-foot/footer.css
@@ -41,6 +41,7 @@ footer #upper {
     padding: 100px 140px;
     color: rgba(31, 32, 65, 0.5);
     flex-wrap: wrap;
+    border-top: 1px solid rgba(31, 32, 65, 0.1);
 }
 
 .footer-block {
